@@ -1,3 +1,9 @@
+Mon Feb 23 07:25:29 2015  Benoit Daloze  <eregontp@gmail.com>
+
+	* time.c: Zone encoding should be US-ASCII if all 7-bits. Fix r46907.
+
+	* test/ruby/test_time.rb, test/ruby/test_time_tz.rb: Update tests.
+
 Sun Feb 22 18:33:42 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
 
 	* common.mk: use ruby organization for rubyspec.
